# discord-bot-example

./: .gitignore  LICENSE.md  README.de.md  README.en.md  README.md
src/bot/: bot.py  config.example.yml  main.py  pyproject.toml  requirements.txt
src/bot/api/: __init__.py  containers.py  dependencies.py  exceptions.py  ipc.py  ipc_factory.py  oauth.py  routes.py  startup.py
src/bot/api/endpoints/: __init__.py  account.py  account_login.py  admin.py  bot.py  guild.py  guilds.py  login.py
src/bot/api/helpers/: __init__.py  check_authenticated.py  ipc_helper.py  user_helper.py
src/bot/api/requests/: __init__.py  guild_settings.py  guild_settings_request.py
src/bot/api/requests/common/: __init__.py  base_request.py
src/bot/api/responses/: __init__.py  guild_settings_response.py  user_response.py
src/bot/api/responses/common/: __init__.py  base_response.py
src/bot/api/utils/: __init__.py  oauth.py  to_camel.py
src/bot/api/viewmodels/: __init__.py  user_vm.py
src/bot/cogs/: base_cog.py
src/bot/cogs/change_presence_task/: cog.py
src/bot/cogs/ipc_routes/: cog.py
src/bot/cogs/main/: cog.py
src/bot/cogs/settings/: cog.py
src/bot/cogs/ticket/: cog.py  create_ticket_dialog.py  ticket_manager.py
src/bot/cogs/warn/: cog.py  warn_manager.py
src/bot/core/: __init__.py  cogloader.py  config.py  env.py  env_validator.py  mongodb.py  mongodb_old.py
src/bot/core/ui/: __init__.py  dialog.py
src/bot/models/: __init__.py  guild_settings.py  permissions.py  server_settings.py  warn.py
src/bot/models/common/: auditable.py
src/bot/models/warn/: warning.py
src/bot/modules/ipc_routes/: cog.py
src/bot/modules/main/: cog.py
src/bot/modules/ticket/: cog.py  mock.py
src/bot/modules/ticket/ui/: create_ticket_dialog.py
src/bot/modules/warn/: cog.py  warn_manager.py
src/bot/services/: __init__.py  permission_service.py  settings_service.py  ticket_service.py  warn_service.py
src/bot/ui/: base_dialog.py  dialog.py
src/dashboard/: .env.example  .eslintrc  .eslintrc.json  craco.config.js  package.json  react-i18next.d.ts  tsconfig.alias.json  tsconfig.json  tsconfig.paths.json  vite.config.ts
src/dashboard/config/: antd.variables.less
src/dashboard/public/: index.html
src/dashboard/src/: App.tsx  GlobalStyles.tsx  Layout.tsx  Routes.tsx  antd.less  antd.overrides.less  index.css  index.tsx  main.tsx  oidcConfig.ts  styled.d.ts
src/dashboard/src/components/: Alert.tsx  Button.tsx  Card.tsx  ChannelSelection.tsx  Dialog.tsx  DiscordIcon.tsx  DiscordLoginButton.tsx  DiscordProfileButton.tsx  GuildSelection.tsx  GuildSelectionDialog.tsx  InfoIcon.tsx  Input.tsx  InputNumber.tsx  Link.tsx  LinkButton.tsx  Navigation.items.tsx  Navigation.tsx  NavigationToggleButton.tsx  Popover.tsx  Select.tsx  ServerSelection.tsx  TextArea.tsx  TextInput.tsx  UserMessageDialog.tsx  index.ts
src/dashboard/src/context-providers/: GuildSelectionContext.tsx  index.ts
src/dashboard/src/helpers/: apiHelper.ts  axiosHelper.ts  choose.ts  index.ts  objectHelper.ts  registerAxiosInterceptors.ts  resetUrl.ts  styleHelper.ts
(+58 files in other folders)
