[tool.black]
exclude = '/(\.eggs|\.git|\.mypy_cache|\.venv.*|_build|build|dist)/'
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
exclude = ["**"]
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.10"
beanie = "^1.10.8"
certifi = "^2021.10.8"
discord-ext-ipc = {git = "https://github.com/krittick/discord-ext-ipc.git", rev = "main"}
dnspython = "^2.2.1"
fastapi-discord = {git = "https://github.com/Tert0/fastapi-discord.git"}
motor = "^2.5.1"
msgpack = "^1.0.3"
munch = "^2.5.0"
py-cord = {git = "https://github.com/Pycord-Development/pycord.git"}
PyYAML = "^6.0"
ujson = "^5.2.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
